--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8"/>
-      <title>BIZVENTUR | We enable entrepreneurship</title>
+      <title>BIZVENTUR | We Enable Entrepreneurship</title>
       <meta content="width=device-width, initial-scale=1" name="viewport"/>
       <link href="assets/css/webflow.css" rel="stylesheet" type="text/css"/>
       <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
@@ -389,25 +389,13 @@
                            <div class="title-with-doubleborder doubleborder-light">
                               <h4 class="text-white homepage-carousel-slide-title">Text Example</h4>
                               <div class="font-title text-uppercase text-white homepage-carousel-slide-subtitle">Text Example<br/></div>
-                              <p class="text-white">Dafiti is the largest fashion e-Commerce company in Latin America. BizVentur helped us to attain segment leadership by offering new technologies, market insights and effective business solutions.</p>
+                              <p class="text-white">Text Example is the largest fashion e-Commerce company in Malaysia. BizVentur helped us to attain segment leadership by offering new technologies, market insights and effective business solutions.</p>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
-               <div class="slide-2 w-slide">
-                  <div class="container slide-container">
-                     <div class="homepage-carousel-slide-description">
-                        <div class="carousel-col">
-                           <div class="title-with-doubleborder doubleborder-light">
-                              <h4 class="text-white homepage-carousel-slide-title">Delia Fischer<br/></h4>
-                              <div class="font-title text-uppercase text-white homepage-carousel-slide-subtitle"><strong>CO-FOUNDER AT WESTWING</strong><br/></div>
-                              <p class="text-white">To build a leading international online retailer for home and living you have to solve many complexities in a fragmented market. Having a reliable partner and investor who shares your vision from the beginning is paramount.<br/></p>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+           
             </div>
             <div id="wf-carousel-prev" class="left-arrow w-slider-arrow-left"></div>
             <div id="wf-carousel-next" class="right-arrow w-slider-arrow-right"></div>
