--- a/index.html
+++ b/index.html
@@ -290,12 +290,12 @@
          <div data-collapse="small" data-animation="default" data-duration="400" data-no-scroll="1" data-doc-height="1" role="banner" class="navbar w-nav">
             <div class="container container-header w-container">
                <a href="index.html" aria-current="page" class="brand w-nav-brand w--current">
-                  <div class="html-embed w-embed"><b><font face="Times new Roman" color="#2D3239">BIZVENTUR</font></b></div>
+                  <div class="html-embed w-embed"><b><font face="Times new Roman" color="#2D3239" size="4">BIZVENTUR</font></b></div>
                </a>
                <nav role="navigation" class="nav-menu w-nav-menu">
-                  <a href="#" class="mobile-nav-link w-nav-link">COMPANIES</a>
-				  <a href="#" class="mobile-nav-link w-nav-link">CAREERS</a>
-                  <a href="#" class="mobile-nav-link investors w-nav-link">INVESTORS</a>
+                  <a href="#" class="mobile-nav-link w-nav-link">ABOUT</a>
+				  <a href="#" class="mobile-nav-link w-nav-link">COMPANIES</a>
+                  <a href="#" class="mobile-nav-link investors w-nav-link">BLOG  </a>
 				  <a href="#" class="mobile-nav-link w-nav-link">MEDIA</a>
                </nav>
                <div class="menu-button text-uppercase w-nav-button">
@@ -306,31 +306,31 @@
       </header>
       <div class="row-section padding-tb-xxl homepage-first-row">
          <h1 class="heading">BizVentur</h1>
-         <h2 class="heading-2">We enable entrepreneurship.<br/></h2>
-         <p class="paragraph font-size-small text-grey text-center">BizVentur incubates and invests in internet and technology companies globally. We provide deep operational support to entrepreneurs and help them build market-leading companies.<br/></p>
+         <h2 class="heading-2">We catalyst business.<br/></h2>
+         <p class="paragraph font-size-small text-grey text-center">Bizventur is a company that ventures into transforming indigenous ideas into a rapidly growing companies providing products and services to the market.<br/></p>
       </div>
       <div class="section-divider animated shake">
-         <div>What we do<br/></div>
+         <div>Who we are<br/></div>
       </div>
       <div class="row-section padding-tb-xxl homepage-second-row">
          <div class="container no-padding">
             <div class="columns w-row">
                <div class="column w-col w-col-4 w-col-stack">
                   <img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec136a248097607fd6ef656_homepage-incubation.svg" alt="" class="homepage-second-row-image"/>
-                  <h4 class="text-grey">Incubation</h4>
-                  <p class="paragraph-2 text-grey">We leverage proprietary processes to build market-leading companies from scratch. Find out more about our portfolio of companies.<br/></p>
+                  <h4 class="text-grey">Ventures</h4>
+                  <p class="paragraph-2 text-grey">We build market-leading companies from scratch. We also operate helping start-ups to grow and consolidate their business. Find out more about our portfolio of companies.<br/></p>
                   <a href="companies.html" class="ghost-button w-button">Our Companies</a>
                </div>
                <div class="column w-col w-col-4 w-col-stack">
                   <img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec136a22f007d0ab4a6dd86_homepage-investment.svg" alt="" class="homepage-second-row-image"/>
-                  <h4 class="text-grey">Investment</h4>
-                  <p class="paragraph-2 text-grey">We partner with daring entrepreneurs to build market-leading companies. Learn more about our investment division, Global Founders Capital.<br/></p>
+                  <h4 class="text-grey">Angel</h4>
+                  <p class="paragraph-2 text-grey">We invest in individuals and businesses that have the potential to succeed. Find out more about our angel project.</p><br/><br/></p>
                   <a href="http://www.globalfounderscapital.com/" target="_blank" class="ghost-button w-button">VENTURE CAPITAL</a>
                </div>
                <div class="column w-col w-col-4 w-col-stack">
                   <img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec136a2c3db1e224d66f90d_homepage-growth.svg" alt="" class="homepage-second-row-image"/>
-                  <h4 class="text-grey">Growth</h4>
-                  <p class="paragraph-2 text-grey">Our extensive operational support team accelerates the growth of ventures we partner with. Become part of a dynamic and innovative scaling process.<br/></p>
+                  <h4 class="text-grey">Ecosystem</h4>
+                  <p class="paragraph-2 text-grey">We create an entrepreneurial ecosystem focused on growing and/or helping to grow start-ups. Find out more about our ecosystem.<br/><br/></p>
                   <a href="careers.html" class="ghost-button w-button">OPEN POSITIONS</a>
                </div>
             </div>
