--- a/index.html
+++ b/index.html
@@ -339,19 +339,22 @@
       <div class="row-section padding-tb-xxl homepage-third-row">
          <div class="container container-horizontal">
             <h3 class="heading-3 title-with-border">Our Companies<br/></h3>
-            <div class="container no-padding our-companies">
+            <div class="companies-wrapper">
                <div class="our-companies-col">
                   <div class="our-companies-col-panel">
-                     <h4 class="heading-5">&gt;200</h4>
-                     <p class="font-title text-light-grey text-uppercase">Companies<br/></p>
-                     <p class="paragraph-3 font-small text-grey">BizVentur's active portfolio spans more than 200 companies on six continents.<br/></p>
+                     <a data-modal-id="bisnest" href="" class="company-link w-inline-block">
+                        <img src="assets/Bisnest.png" alt="" class="image-3 companies-image--black">
+                        <img src="assets/Bisnest-BL.png" alt="" class="image-2">
+                     </a>
                   </div>
                </div>
+
                <div class="our-companies-col">
                   <div class="our-companies-col-panel">
-                     <h4 class="heading-5">&gt;42,000</h4>
-                     <p class="font-title text-light-grey text-uppercase">EMPLOYEES<br/></p>
-                     <p class="paragraph-3 font-small text-grey">In 2018 BizVentur's selected companies provided employment for more than 42,000 people.<br/></p>
+                      <a data-modal-id="bisnest" href="" class="company-link w-inline-block">
+                        <img src="assets/Oda-Bazaar-B.png" alt="" class="image-3 companies-image--black">
+                        <img src="assets/Oda-Bazaar-R.png" alt="" class="image-2">
+                     </a>
                   </div>
                </div>
                <div class="our-companies-col last">
