--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
       <link href="assets/ajax/libs/aos/2.3.4/aos.css" rel="stylesheet" type="text/css">
       
+	  <style>
+.company-item .companies-image--black:first-of-type {
+	transition: opacity .16s ease-in-out;
+}
+.company-item:hover .companies-image--black:first-of-type {
+	opacity: 0;
+}
+</style>
    </head>
    <body class="body-3">
       <header id="header" class="section">
@@ -339,32 +347,23 @@
       <div class="row-section padding-tb-xxl homepage-third-row">
          <div class="container container-horizontal">
             <h3 class="heading-3 title-with-border">Our Companies<br/></h3>
-            <div class="companies-wrapper">
-               <div class="our-companies-col">
-                  <div class="our-companies-col-panel">
-                     <a data-modal-id="bisnest" href="" class="company-link w-inline-block">
-                        <img src="assets/Bisnest.png" alt="" class="image-3 companies-image--black">
-                        <img src="assets/Bisnest-BL.png" alt="" class="image-2">
-                     </a>
-                  </div>
-               </div>
-
-               <div class="our-companies-col">
-                  <div class="our-companies-col-panel">
-                      <a data-modal-id="bisnest" href="" class="company-link w-inline-block">
-                        <img src="assets/Oda-Bazaar-B.png" alt="" class="image-3 companies-image--black">
-                        <img src="assets/Oda-Bazaar-R.png" alt="" class="image-2">
-                     </a>
-                  </div>
-               </div>
-               <div class="our-companies-col last">
-                  <div class="our-companies-col-panel">
-                     <h4 class="heading-5">∼€30B<br/></h4>
-                     <p class="font-title text-light-grey text-uppercase">VALUATION<br/></p>
-                     <p class="paragraph-3 font-small text-grey">BizVentur listed companies with a total valuation of c. EUR 30bn.<br/></p>
-                  </div>
-               </div>
-            </div>
+            
+			
+			
+			
+			<div class="companies-wrapper">
+			
+			<div class="company-item"><a data-modal-id="agencasa" href="#" class="company-link w-inline-block"><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ecbc6b545632141ea5dc337_AgenCasa_black.svg" alt="" class="image-3 companies-image--black"><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ecbc6b686ad52352ce097d4_AgenCasa_color.svg" alt="" class="image-2"></a></div>
+			
+			<div class="company-item"><a data-modal-id="bluenest" href="#" class="company-link w-inline-block"><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ecbc6b6a6fd59db0ecf5be6_Bluenest_black.svg" alt="" class="image-3 companies-image--black"><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ecbc6b636f72f726d556149_Bluenest_color.svg" alt="" class="image-2"></a></div>
+			
+			<div class="company-item"><a data-modal-id="everstox" href="#" class="company-link w-inline-block"><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5eec84a04beb246e52ff0d96_Everstox_black.svg" alt="" class="image-3 companies-image--black"><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5eec849ed80e86600ded6efa_Everstox_color.svg" alt="" class="image-2"></a></div>
+			
+			
+			
+			</div>
+			
+			
             <img data-aos="fade-down" class="phone-img" src="assets/" alt="" sizes="(max-width: 991px) 100vw, 750px" data-aos-easing="ease-out-quad" data-aos-anchor-placement="top-center" srcset="assets/phone.png 500w, assets/phone.png 1022w" data-aos-duration="800"/>
 			
 			<img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ee0916e3b550139583cbddd_our-companies-GSG.svg" data-aos-delay="100" data-aos="fade-up" alt="" class="bubble-logo bubble-jumia aos-init"/><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ee0916ebae55172a12e743b_our-companies-Expertlead.svg" data-aos-delay="150" data-aos="fade-up" alt="" class="bubble-logo bubble-foodpanda"/><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec24b267b4d1193faf221d0_our-companies-g-f-g.svg" data-aos-delay="200" data-aos="fade-up" alt="" class="bubble-logo bubble-gfg"/><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec24b27c935a8ac2a416bc4_our-companies-westwing.svg" data-aos-delay="250" data-aos="fade-up" alt="" class="bubble-logo bubble-westwing"/><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec24b26f6793e04d8e83aa4_our-companies-nestpick.svg" date-aos-delay="200" data-aos="fade-up" alt="" class="bubble-logo bubble-nestpick"/><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ee0916e1d046680683c3623_our-companies-Instafreight.svg" data-aos-delay="200" data-aos="fade-up" alt="" class="bubble-logo bubble-dh"/><img src="https://global-uploads.webflow.com/5e998d8310343e62a9e92ada/5ec24b26225d1246ab5a435f_our-companies-spotcap.svg" data-aos-delay="150" data-aos="fade-up" alt="" class="bubble-logo bubble-spotcap"/>
