--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 
       <link rel="stylesheet" id="parent-style-css" href="assets/file/style.css" type="text/css" media="all"/>
-      <link rel="stylesheet" id="main-styles-css" href="assets/file/style(1).css" type="text/css" media="all"/>
+     
 
 
 
@@ -562,7 +562,7 @@
                </div>
                <div class="column-3 w-col w-col-6 w-col-stack">
                   <div class="footer-links w-row">
-                     <div class="w-col w-col-3"><a href="companies.html" class="margin-top-m footer-title-link">About</a>
+                     <div class="w-col w-col-3"><a href="#" class="margin-top-m footer-title-link">About</a>
                       
                      </div>
                      <div class="w-col w-col-3">
