--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
       <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
 
-      <link rel="stylesheet" id="parent-style-css" href="assets/file/style.css" type="text/css" media="all"/>
+      <link rel="stylesheet" id="parent-style-css" href="assets/file/mapstyle.css" type="text/css" media="all"/>
      
 
 
